apex-libraries/sfdx-source/at4dx/main/schema/objects/DomainProcessBinding__mdt/fields/ExecuteAsynchronous__c.field-meta.xml
<CustomField>
    <fullName>ExecuteAsynchronous__c</fullName>
    <defaultValue>false</defaultValue>
    <description
    >If checked, then the action will be executed in Queueable context and not the primary execution thread.</description>
    <inlineHelpText
    >If checked, then the action will be executed in Queueable context and not the primary execution thread.</inlineHelpText>
    <label>Execute Asynchronous</label>
    <type>Checkbox</type>
</CustomField>