apex-libraries/sfdx-source/at4dx/main/schema/objects/DomainProcessBinding__mdt/fields/LogicalInverse__c.field-meta.xml
<CustomField>
    <fullName>LogicalInverse__c</fullName>
    <defaultValue>false</defaultValue>
    <description
    >If checked, then the logical inverse of the associated criteria will be used for the criteria.  Basically, instead of the criteria retaining the records, those records will be filtered out of the working set.</description>
    <inlineHelpText
    >If checked, then the logical inverse of the associated criteria will be used for the criteria.  Basically, instead of the criteria retaining the records, those records will be filtered out of the working set.</inlineHelpText>
    <label>Logical Inverse</label>
    <type>Checkbox</type>
</CustomField>