apex-libraries/sfdx-source/at4dx/main/schema/objects/DomainProcessBinding__mdt/fields/PreventRecursive__c.field-meta.xml
<CustomField>
    <fullName>PreventRecursive__c</fullName>
    <defaultValue>false</defaultValue>
    <description
    >If checked, then the execution of this action a second time in the trigger execution context is prevented.</description>
    <inlineHelpText
    >If checked, then the execution of this action a second time in the trigger execution context is prevented.</inlineHelpText>
    <label>Prevent Recursive</label>
    <type>Checkbox</type>
</CustomField>