apex-libraries/sfdx-source/at4dx/main/schema/objects/DomainProcessBinding__mdt/fields/RelatedDomainBindingSObject__c.field-meta.xml
<CustomField>
    <fullName>RelatedDomainBindingSObject__c</fullName>
    <label>Related Domain SObject Binding</label>
    <referenceTo>EntityDefinition</referenceTo>
    <relationshipLabel>Domain_Processes</relationshipLabel>
    <relationshipName>Domain_Processes</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>