apex-libraries/sfdx-source/at4dx/main/schema/objects/DomainProcessBinding__mdt/validationRules/ExecuteAsynchronousValidOnlyOnTypeAction.validationRule-meta.xml
<ValidationRule>
    <fullName>ExecuteAsynchronousValidOnlyOnTypeAction</fullName>
    <active>true</active>
    <description>ExecuteAsynchronous__c can only be active for Type__c = "Action"</description>
    <errorConditionFormula>TEXT(Type__c) != "Action" &amp;&amp;  ExecuteAsynchronous__c</errorConditionFormula>
    <errorDisplayField>ExecuteAsynchronous__c</errorDisplayField>
    <errorMessage>"Execute Asynchronous" can only be true when Type is "Action"</errorMessage>
</ValidationRule>