apex-libraries/sfdx-source/at4dx/main/schema/objects/DomainProcessBinding__mdt/validationRules/LogicalInverseValidOnlyOnTypeCriteria.validationRule-meta.xml
<ValidationRule>
    <fullName>LogicalInverseValidOnlyOnTypeCriteria</fullName>
    <active>true</active>
    <description>The LogicalInverse__c field is only valid when the type is Criteria.</description>
    <errorConditionFormula>TEXT(Type__c) != "Criteria" &amp;&amp; LogicalInverse__c</errorConditionFormula>
    <errorDisplayField>LogicalInverse__c</errorDisplayField>
    <errorMessage>"Logical Inverse" can only be true when Type is "Criteria"</errorMessage>
</ValidationRule>