apex-libraries/sfdx-source/at4dx/main/schema/objects/DomainProcessBinding__mdt/validationRules/Not_Both_BindObj_And_BindObjAlt.validationRule-meta.xml
<ValidationRule>
    <fullName>Not_Both_BindObj_And_BindObjAlt</fullName>
    <active>true</active>
    <description
    >This validation rule ensures that only the &quot;Related Domain Binding SObject&quot; or the &quot;Related Domain Binding SObject Alternate&quot; field is specified and not both.</description>
    <errorConditionFormula
    >NOT( ISBLANK( RelatedDomainBindingSObject__c ) ) &amp;&amp; NOT( ISBLANK( RelatedDomainBindingSObjectAlternate__c ) )</errorConditionFormula>
    <errorMessage
    >Only specify the &quot;Related Domain Binding SObject&quot; field or the &quot;Related Domain Binding SObject Alternate&quot; field; not both.</errorMessage>
</ValidationRule>