apex-libraries/sfdx-source/at4dx/main/schema/objects/DomainProcessBinding__mdt/validationRules/PreventRecursiveValidOnlyOnProcessTE.validationRule-meta.xml
<ValidationRule>
    <fullName>PreventRecursiveValidOnlyOnProcessTE</fullName>
    <active>true</active>
    <description>PreventRecursive__c can only be active for ProcessContext__c = "TriggerExecution"</description>
    <errorConditionFormula
    >PreventRecursive__c &amp;&amp; text( ProcessContext__c ) != "TriggerExecution"</errorConditionFormula>
    <errorDisplayField>PreventRecursive__c</errorDisplayField>
    <errorMessage>"Prevent Recursive" is only valid when the process context is "Trigger Execution"</errorMessage>
</ValidationRule>